<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.instructions.InstructionsFragment">

        <!-- By using ConstraintLayout I can control on any view i want and -->
        <!-- edit the view location inside the screen at any place -->
        <!-- also to make control more flexible and able to stretch -->

        <!-- Guideline is to avoid using marginTop -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="466dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_instructions"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_secondInfo"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/tv_firstInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:text="@string/don_t_duplicate_your_items"
            android:textColor="#DD2C00"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_secondInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#DD2C00"
            android:textStyle="bold"
            android:text="@string/please_add_real_product_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_firstInfo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BFA5"
            android:text="@string/brows_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>