<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="singleShoe"
            type="com.android.udacityfirst.model.Shoe"/>
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp"
            android:layout_margin="6dp"
            app:cardCornerRadius="16dp"
            android:elevation="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="8dp">


                <ImageView
                    android:id="@+id/iv_shoe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shoe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_shoeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="6dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    tools:text="Amazing"
                    android:text="@{singleShoe.shoeName}"
                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_company"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <TextView
                    android:id="@+id/tv_shoeCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="6dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    tools:text="Amazing"
                    android:text="@{singleShoe.shoeCompany}"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/tv_shoeSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="6dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@id/textView3"
                    tools:text="Amazing"
                    android:text="@{singleShoe.shoeSize}"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_description"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <TextView
                    android:id="@+id/tv_shoeDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="6dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@id/textView4"
                    tools:text="Amazing"
                    android:text="@{singleShoe.shoeDescription}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>